[tool.poetry]
name = "ceneo-reviews"
version = "0.1.0"
description = ""
authors = ["Kamil Cholewa <kcholew4@gmail.com>"]
readme = "README.md"
packages = [{include = "ceneo_reviews"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-restful = "^0.3.9"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
fake-useragent = "^1.1.1"
pymongo = "^4.3.3"
python-dotenv = "^1.0.0"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
